# gdps-archive

./: pyproject.toml
.github/workflows/: upload_to_ia.yml
gdps_archive/: archive.py
